# cmake_study

./: .gitignore  CMakeLists.txt  README.md
projects/lib_test0/: CMakeLists.txt
projects/test0/: CMakeLists.txt  License.txt  configure.bat  install.bat  main.cpp  run.bat  test0_config.h.in
projects/test0/adder/: CMakeLists.txt  adder.cpp
projects/test1/: CMakeLists.txt  main.cpp
